fixed view all photos button alignment

--- a/src/Css/profile.css
+++ b/src/Css/profile.css
@@ -209,7 +209,7 @@
 }
 
 .fa-images {
-  padding-top: 19px;
+  padding-top: 3px;
 }
 
 .padding-right {
